--- a/legacy-migration-engine/src/main/resources/application.yml
+++ b/legacy-migration-engine/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 # Configuración dev 
 spring:
+  application:
+    name: legacy-migration-engine
   profiles:
     active: dev
-  application:
-    name: Legacy2Modern Engine
+app: 
+  cors:
+    allowed-origins: "http://localhost:4200"
+---
 
 ---
 # Perfil prod
@@ -16,3 +20,6 @@ springdoc:
     enabled: false
   swagger-ui:
     enabled: false
+app: 
+  cors:
+    allowed-origins: ${CORS_ALLOWED_ORIGINS}
