--- a/legacy-migration-engine/pom.xml
+++ b/legacy-migration-engine/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>antlr4-runtime</artifactId>
 			<version>4.13.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
